added university post type

--- a/themes/university/css/modules/btn.scss
+++ b/themes/university/css/modules/btn.scss
@@ -10,7 +10,11 @@
   border: none;
   outline: none;
 
-  &--blue {
+  &-blue {
     background-color: $mainBlue;
+  }
+
+  .red {
+    color: red;
   }
 }
