--- a/themes/university/css/modules/maps.scss
+++ b/themes/university/css/modules/maps.scss
@@ -18,3 +18,14 @@
     color: red;
   }
 }
+
+.acf-map {
+  width: 100%;
+  height: 400px;
+  border: #ccc solid 1px;
+  margin: 20px 0;
+
+  img {
+    max-width: inherit !important;
+  }
+}
