to show program areas taught

--- a/themes/university/css/modules/maps.scss
+++ b/themes/university/css/modules/maps.scss
@@ -29,3 +29,11 @@
     max-width: inherit !important;
   }
 }
+
+.gm-style-iw {
+  flex-direction: row-reverse !important;
+  align-items: center;
+  p {
+    margin: 0;
+  }
+}
