--- a/themes/university/css/style.scss
+++ b/themes/university/css/style.scss
@@ -4,6 +4,7 @@
 @import "modules/maps";
 @import "modules/header";
 @import "modules/footer";
+@import "modules/page-elements";
 
 :root {
   --nav-active-link: #faf0ca;
