--- a/themes/university/css/style.scss
+++ b/themes/university/css/style.scss
@@ -5,6 +5,7 @@
 @import "modules/header";
 @import "modules/footer";
 @import "modules/page-elements";
+@import "modules/login";
 
 :root {
   --nav-active-link: #faf0ca;
